# 202511_drone_forge

./: AGENTS.md  Cargo.toml  README.md
.cursor/plans/: mil-2116b45a.plan.md
design/: 20251116 MVP.md  20251116_Missing.md  20251116_UI.md  20251116_look.md  20251116_main_idea.md  20251116_scripting.md
src/: coords.rs  drones.rs  dsl_ast.rs  engine.rs  hud.rs  lib.rs  resources.rs  tasks.rs  tile.rs  world.rs
tests/: gui_design.rs  integration_end_to_end.rs
