[package]
name = "droneforge"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Droneforge Contributors"]
description = "Core logic for a top-down, tile-based automation game with drones"

[lib]
name = "droneforge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
rand = "0.8"


